# fastapi-test

./: .gitignore  README.md  main.py  models.py  pyproject.toml
api_router/: README.md  main.py
api_router/apis/: __init__.py  items.py  users.py
test_celery/: celery_worker.py  main.py
test_login_jwt_postgresql/: README.md  main.py
test_login_jwt_postgresql/app/api/: __init__.py  depends.py
test_login_jwt_postgresql/app/api/v1/: login.py  users.py
test_login_jwt_postgresql/app/core/: config.py  security.py
test_login_jwt_postgresql/app/crud/: base.py  user.py
test_login_jwt_postgresql/app/db/: base_class.py  init_db.py
test_login_jwt_postgresql/app/models/: user.py
test_login_jwt_postgresql/app/schemas/: user.py
test_redis/: README.md  main.py
