[tool.poetry]
name = "learn fastapi"
version = "0.1.0"
description = "'fas 학습하기'"
authors = ["Jin Yu/유진 <jin.yu@vuno.co>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
black = "^22.6.0"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
